# voxnix

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  agent.py  config.py
agent/chat/: __init__.py  __main__.py  bot.py  handlers.py  history.py
agent/nix_gen/: __init__.py  discovery.py  generator.py  models.py
agent/tests/: __init__.py  test_chat_handlers.py  test_cli.py  test_containers.py  test_diagnostics.py  test_discovery.py  test_generator.py  test_history.py  test_models.py  test_query.py  test_workloads.py  test_zfs.py
agent/tools/: cli.py  containers.py  diagnostics.py  query.py  workloads.py  zfs.py
docs/: architecture.md  handoff.md  plan-multi-tenancy.md
nix/: mkContainer.nix  moduleLibrary.nix
nix/host/: agent-service.nix  default.nix  hardware.nix  networking.nix  secrets.nix  storage.nix
nix/modules/: fish.nix  git.nix  tailscale.nix  workspace.nix
parts/: agent.nix  checks.nix  devshell.nix  formatting.nix  host.nix  modules.nix
secrets/: README.md  agent-env.age  secrets.nix
