[project]
name = "voxnix-agent"
version = "0.1.0"
description = "Orchestrator agent for voxnix — agentic NixOS container and VM management"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
    "pydantic-ai>=0.1",
    "logfire>=3.0",
    "pydantic-settings>=2.13.1",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "ty>=0.0.0a1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["agent"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.pytest.ini_options]
testpaths = ["agent"]
pythonpath = ["."]
asyncio_mode = "auto"
